<resources>
    <string name="app_name">Gotour</string>
    <string name="splash_screen_go_tour">splash screen go tour</string>
    <string name="stepper_image_description">first stepper image</string>
    <string name="second_stepper_image_description">second stepper image</string>
    <string name="third_stepper_image_description">third stepper image</string>
    <string name="back_button_description">back button</string>
    <string name="next_button_description">next button</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="explore">Explore</string>
    <string name="easy_peasy">Easy Peasy</string>
    <string name="enjoy_tour">Enjoy Tour</string>
    <string name="explore_sub_title">Explore your favourite destination\naround the world.</string>
    <string name="easy_sub_title">Make your travel experience very \neasy &amp; peasy.</string>
    <string name="enjoy_sub_title">Enjoy your favourite destination with\nyour love one.</string>
    <string name="log_in_now">Log In Now</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="enjoy_your_traveling">Enjoy your traveling</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="log_in_with_google">Log In With Google</string>
    <string name="google_icon">Google Icon</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="terms_of_use_text">I agree and accept the terms of use.</string>
    <string name="get_ready">Get Ready For\nThe Travel Trip!</string>
    <string name="find_your_location">Find your location…</string>
    <string name="search_button_description">search description</string>
    <string name="profile_button_description">profile description</string>
    <string name="main_back_button_description">main back description</string>


    <string name="image_title_string_1">Winter in Portugal</string>
    <string name="image_title_string_2">Sesimbra e Arrabida</string>
    <string name="image_title_string_3">Golden Gate bridge</string>
    <string name="image_title_string_4">Temple of the Sacred Heart of Jesus</string>
    <string name="image_title_string_5">St. Paul\'s Cathedral</string>
    <string name="image_title_string_6">North Cascades National Park</string>
    <string name="image_title_string_7">Wild wood sweden yoga treat</string>
    <string name="image_title_string_8">Eiffel Tower</string>
    <string name="image_title_string_9">Rhine Tower</string>
    <string name="image_title_string_10">Doi Inthanon</string>
    <string name="image_location_string_1">Lisbon, Portugal</string>
    <string name="image_location_string_2">Sesimbra, Lisbon, Portugal</string>
    <string name="image_location_string_3">San Francisco, USA</string>
    <string name="image_location_string_4">Barcelona, Spain</string>
    <string name="image_location_string_5">London, England</string>
    <string name="image_location_string_6">Washington State, USA</string>
    <string name="image_location_string_7">Stockholm, Sweden</string>
    <string name="image_location_string_8">Paris, France</string>
    <string name="image_location_string_9">Düsseldorf, Germany</string>
    <string name="image_location_string_10">Chiang Mai, Thailand</string>
    <string name="image_prices_1">$3 000</string>
    <string name="image_prices_2">$2 200</string>
    <string name="image_prices_3">$5 000</string>
    <string name="image_prices_4">$3 100</string>
    <string name="image_prices_5">$4 500</string>
    <string name="image_prices_6">$1 900</string>
    <string name="image_prices_7">$2 700</string>
    <string name="image_prices_8">$7 400</string>
    <string name="image_prices_9">$2 500</string>
    <string name="image_prices_10">$4 000</string>

    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="sample_name_string">Majid Ebrahimi</string>
    <string name="sample_gmail_string">majidebrahiimi@gmail.com</string>
    <string name="forward_button_description">forward description</string>
    <string name="menu_button_content_description">menu content description</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="payment_method">Payment Method</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="preference">Preference</string>
    <string name="banking_38_payment"><![CDATA[Banking & Payment]]></string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="card_image">Card images</string>
    <string name="best_place">Best Place</string>
    <string name="see_all">See All</string>
    <string name="my_location">My Location</string>
    <string name="biography_string">Hello, i\'m Beginner junior Front-end Developer.\nI like create an Android App.\nI am over 3 mount\'s experience in Android Studio.</string>
    <string name="search_message">Search Message…</string>
    <string name="saman_card">Saman Card</string>
    <string name="card_number_string">6219\t\t\t8619\t\t\t1542\t\t\t0789</string>
    <string name="cardlogo_content_description">CardLogo content Description</string>
    <string name="exp_date">Exp Date \n\t\t7/21</string>
    <string name="card_balance">$10 000</string>

</resources>