<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivityLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <!--ToDone Dimen-->

    <TextView
        android:id="@+id/TextLogo"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_x_medium"
        android:text="@string/enjoy_your_traveling"
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintEnd_toEndOf="@+id/GoTourLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/GoTourLogo"
        app:layout_constraintTop_toBottomOf="@+id/GoTourLogo" />

    <ImageView
        android:id="@+id/GoTourLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxxx_large"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/go_tour_logo" />

    <TextView
        android:id="@+id/LoginTitle"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_x_large"
        android:text="@string/login"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="@+id/GoTourLogo"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/GoTourLogo"
        app:layout_constraintTop_toBottomOf="@+id/TextLogo" />


    <Button
        android:id="@+id/LoginButton"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/spacing_xx_middle"
        android:layout_marginTop="@dimen/spacing_xx_middle"
        android:layout_marginEnd="@dimen/spacing_xx_middle"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPassword"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputEmailLoginLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_xx_large"
        android:layout_marginTop="@dimen/spacing_sm_large"
        android:hint="@string/email"
        app:hintTextAppearance="@style/edittext_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputEmailLogin"
            style="@style/edittext_style"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputPasswordLoginLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_xx_large"
        android:layout_marginTop="@dimen/spacing_middle"
        android:hint="@string/password"
        app:hintTextAppearance="@style/edittext_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputEmailLoginLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputPasswordLogin"
            style="@style/edittext_style"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ForgotPassword"
        style="@style/link_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xx_middle"
        android:background="@drawable/link_text_background"
        android:text="@string/forgot_password"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="@+id/LoginButton"
        app:layout_constraintStart_toStartOf="@+id/LoginButton"
        app:layout_constraintTop_toBottomOf="@+id/InputPasswordLoginLayout"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/OrTextView"
        style="@style/sub_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_x_medium"
        android:text="@string/or"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/LoginButton"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/LoginButton"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/LoginWithGoogleButton"
        style="@style/button_with_shadow_style"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/spacing_xx_middle"
        android:layout_marginTop="@dimen/spacing_x_medium"
        android:layout_marginEnd="@dimen/spacing_xx_middle"
        android:drawableStart="@drawable/ic_google_icon"
        android:drawablePadding="@dimen/spacing_negative_large"
        android:paddingStart="@dimen/spacing_xmm_large"
        android:paddingEnd="0dp"
        android:text="@string/log_in_with_google"
        app:layout_constraintEnd_toEndOf="@+id/LoginButton"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/LoginButton"
        app:layout_constraintTop_toBottomOf="@+id/OrTextView"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/SignUpHere"
        style="@style/link_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xx_middle"
        android:background="@drawable/link_text_background"
        android:text="@string/sign_up_here"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LoginWithGoogleButton"
        app:layout_constraintStart_toStartOf="@+id/LoginWithGoogleButton"
        app:layout_constraintTop_toBottomOf="@+id/LoginWithGoogleButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>