<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ActivitySplash">

    <!--ToDone dimens-->

    <ImageView
        android:id="@+id/SplashImage"
        android:layout_width="663dp"
        android:layout_height="993dp"
        android:contentDescription="@string/splash_screen_go_tour"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        app:srcCompat="@drawable/splash_image"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/TextLogo"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_x_medium"
        android:text="@string/enjoy_your_traveling"
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintEnd_toEndOf="@+id/GoTourLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/GoTourLogo"
        app:layout_constraintTop_toBottomOf="@+id/GoTourLogo"
         />

    <ImageView
        android:id="@+id/GoTourLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358"
        app:srcCompat="@drawable/go_tour_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>