<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivitySignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/TextLogo"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enjoy_your_traveling"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/GoTourLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/GoTourLogo"
        app:layout_constraintTop_toBottomOf="@+id/GoTourLogo" />

    <ImageView
        android:id="@+id/GoTourLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/go_tour_logo" />

    <TextView
        android:id="@+id/LoginTitle"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/GoTourLogo"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/GoTourLogo"
        app:layout_constraintTop_toBottomOf="@+id/TextLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputPasswordSignUpLayout"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        app:hintTextAppearance="@style/edittext_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenderRadioGroup"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputPasswordSignUp"
            style="@style/edittext_style"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputConfirmPasswordSignUpLayout"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="15dp"
        android:hint="@string/confirm_password"
        app:hintTextAppearance="@style/edittext_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputPasswordSignUpLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputConfirmPasswordSignUp"
            style="@style/edittext_style"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/GenderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_height"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginTitle">

        <RadioButton
            android:id="@+id/MaleRadioButton"
            style="@style/radio_button_style"
            android:text="@string/male"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/FemaleRadioButton"
            style="@style/radio_button_style"
            android:text="@string/female"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/TermsOfUseCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:background="@drawable/pressed_background_orange"
        android:button="@drawable/rectangle_btn_radio"
        app:layout_constraintBottom_toBottomOf="@+id/TermsOfUseSpannedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TermsOfUseSpannedText"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/TermsOfUseSpannedText"
        style="@style/link_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_marginHorizontal="@dimen/small_end_start_margin"
        android:layout_marginStart="44dp"
        android:layout_marginTop="@dimen/small_end_start_margin"
        android:layout_marginEnd="@dimen/small_end_start_margin"
        android:gravity="center_vertical"
        android:text="@string/terms_of_use_text"
        android:textColor="@color/black"
        android:textColorLink="@color/base_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputConfirmPasswordSignUpLayout" />

    <Button
        android:id="@+id/SignUpButton"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/small_end_start_margin"
        android:layout_marginTop="@dimen/small_end_start_margin"
        android:layout_marginEnd="@dimen/small_end_start_margin"
        android:layout_marginBottom="@dimen/medium_top_bottom_margin"
        android:enabled="false"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TermsOfUseSpannedText"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>